# ABBA

./: .gitignore  CONSOLIDATION_SUMMARY.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
Projects/ABBA/: .gitignore  README.md  REFACTOR_SUMMARY.md  audit_report.md  config.yaml  inventory_report.md  pyproject.toml  requirements-dev.txt
Projects/ABBA/archive/: Integrated_NHL_Pipeline.py  Integrated_NHL_Pipeline_Demo.py  advanced_data_integrator.py  agents.py  analytics_module.py  analyze_login_page.py  analyze_login_page_advanced.py  balance_monitor.py  browserbase_executor.py  browserbase_executor_sdk.py  browserbase_integration.py  browserbase_playwright_executor.py  cache_manager.py  comprehensive_agent_testing.py  data_collector.py  data_fetcher.py  database.py  debug_2024_test.py  draftkings_balance_monitor.py  draftkings_balance_monitor_enhanced_stealth.py  draftkings_balance_monitor_final_stealth.py  draftkings_balance_monitor_stealth.py  draftkings_balance_monitor_stealth_fixed.py  draftkings_balance_monitor_ultimate_stealth.py  draftkings_balance_monitor_working_stealth.py  draftkings_brightdata_stealth.py  draftkings_brightdata_stealth_fixed.py  draftkings_manual_login_monitor.py  enhanced_feature_engineer.py  execution.py  final_demo_test.py  fund_management_integration.py  human_agent_interface.py  init_db.py  live_betting_system.py  live_demo_test.py  main.py  mlb_2024_aggressive_fix.py  mlb_2024_final_fix.py  mlb_2024_final_roi_fix.py  (+31 more)
Projects/ABBA/archive/old_docs/: AGENT_ANALYSIS_AND_BROWSERBASE_STRATEGY.md  ANTI_DETECTION_STRATEGY.md  Aggressive_MLB_Strategy.md  Aggressive_NHL_Strategy.md  BRIGHTDATA_INTEGRATION_GUIDE.md  BRIGHTDATA_INTEGRATION_SUMMARY.md  BROWSERBASE_FINAL_COMPLETE.md  BROWSERBASE_FINAL_STATUS.md  BROWSERBASE_FINAL_SUMMARY.md  BROWSERBASE_IMPLEMENTATION_SUMMARY.md  BROWSERBASE_INTEGRATION_COMPLETE.md  BROWSERBASE_PLAYWRIGHT_FINAL_SUCCESS.md  BROWSERBASE_PLAYWRIGHT_LOGIN_COMPLETE.md  BROWSERBASE_PLAYWRIGHT_SUCCESS.md  BROWSERBASE_STEALTH_SUCCESS.md  BROWSERBASE_SUCCESS_SUMMARY.md  BROWSERBASE_TROUBLESHOOTING.md  DATABASE_SETUP.md  DATA_PIPELINE_ANALYSIS.md  DATA_PIPELINE_IMPLEMENTATION_SUMMARY.md  DATA_PIPELINE_OPTIMIZATION_PLAN.md  DATA_PIPELINE_SUMMARY.md  FINAL_PROFESSIONAL_ANALYSIS_SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  FUND_MANAGEMENT_GUIDE.md  INTEGRATED_PIPELINE_SUMMARY.md  LIVE_DEMO_SUMMARY.md  LIVE_TESTING_SETUP.md  MLB_Betting_Strategy_Analysis.md  MLB_Strategy_Analysis_Response.md  MLB_TESTING_README.md  MLB_TESTING_SYSTEM_SUMMARY.md  NEXT_STEPS_ACTION_PLAN.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION_PLAN.md  PROFESSIONAL_ANALYTICS_RESPONSE.md  PROFESSIONAL_ANALYTICS_UPGRADE_PLAN.md  PROPER_VALIDATION_CHECKLIST.md  REALISTIC_DEMO_SUMMARY.md  Realistic_MLB_Betting_Strategy.md  (+7 more)
Projects/ABBA/archive/trading/: __init__.py  algo_trading.py
Projects/ABBA/docs/: BALANCE_MONITORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  anti-detection-security.md  audit_report.md  brightdata-integration.md  browserbase-integration.md  debugging.md  docs_audit.md  implementation-plans.md  mlb-strategy.md  nhl-strategy.md  pipeline_blueprint.md  validation-testing.md
Projects/ABBA/examples/: Aggressive_MLB_Example.py  Aggressive_NHL_Example.py  Enhanced_System_Example.py  MLB_Game_Analysis_Example.py  Realistic_MLB_Example.py  Ultra_Conservative_Example.py  basic_analytics.py
Projects/ABBA/skills/: betting_strategy.md  cap_strategy.md  season_story.md  value_scan.md
Projects/ABBA/src/abba/: __init__.py
Projects/ABBA/src/abba/agents_modules/: __init__.py  dynamic_orchestrator.py  reflection_agent.py
Projects/ABBA/src/abba/analytics/: __init__.py  biometrics.py  ensemble.py  graph.py  interfaces.py  manager.py  models.py  personalization.py  refactored_analytics_manager.py
Projects/ABBA/src/abba/api/: real_time_connector.py
Projects/ABBA/src/abba/connectors/: __init__.py  live.py  seed.py
Projects/ABBA/src/abba/core/: config.py  dependency_injection.py  logging.py
Projects/ABBA/src/abba/data/: __init__.py
Projects/ABBA/src/abba/engine/: __init__.py  elo.py  graph.py  hockey.py  value.py
Projects/ABBA/src/abba/server/: mcp.py  toolkit.py
Projects/ABBA/src/abba/storage/: duckdb.py
Projects/ABBA/src/abba/trading/: __init__.py  algo_trading.py
Projects/ABBA/src/abba/utils/: __init__.py  data_utils.py  validation_utils.py
Projects/ABBA/tests/: conftest.py  ml_edge_reality_check.py  test_analytics.py  test_backtest.py  test_bias_detection.py  test_brightdata_alternative.py  test_brightdata_connection.py  test_brightdata_integration.py  test_browserbase_api.py  test_browserbase_existing_session.py  test_browserbase_integration.py  test_browserbase_playwright.py  test_browserbase_playwright_simple.py  test_browserbase_sdk.py  test_browserbase_selenium.py  test_browserbase_selenium_fixed.py  test_browserbase_websocket.py  test_browserbase_websocket_methods.py  test_caching_system.py  test_data_pipeline_optimizations.py  test_data_verification.py  test_db_integration.py  test_draftkings_live_login.py  test_draftkings_simulation.py  test_draftkings_stealth.py  test_draftkings_websocket.py  test_engine.py  test_hockey.py  test_live_balance.py  test_live_balance_simple.py  test_live_betting_system.py  test_mcp.py  test_mlb_prediction_system.py  test_mlb_real_validation.py  test_mlb_system.py  test_phase3_implementation.py  test_phase3_simple.py  test_simple_db.py  test_simple_draftkings.py  test_simple_system.py  (+4 more)
Projects/ABBA/tests/integration/: test_analytics_zero_mock.py  test_database_zero_mock.py  test_live_betting_zero_mock.py  test_sport_specific_zero_mock.py
Projects/ABBA/tests/mock-api-config/: mockserver.properties
Projects/ABBA/tests/unit/: test_analytics.py
Projects/ABBA/validation_results/: 2024_mlb_final_report.txt  2024_mlb_roi_fixed_report.txt  2024_mlb_validation_report.txt
(+232 files in other folders)
