[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abba"
version = "2.0.0"
description = "Sports analytics toolkit for AI agents -- live data, ensemble predictions, Kelly sizing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "xgboost>=1.7.0",
    "shap>=0.41.0",
]

[project.urls]
Repository = "https://github.com/paxtonedgar/ABBA"

[project.scripts]
abba-server = "abba.server.http:run_http_server"
abba-mcp = "abba.server.mcp:run_stdio_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "contract: trust-blocker contract tests — must pass before deployment",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
